kubernetes-manifests/sidekiq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dv-sidekiq-deployment
  labels: 
    app: dv-sidekiq
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dv-sidekiq
  template:
    metadata:
      labels:
        app: dv-sidekiq
    spec:
      containers:
      - name: dv-sidekiqb
        # image: stokwell/daily-vocabulary-sidekiq:0.1.12
<<<<<<< HEAD
        image: stokwell/dv-rails:0.2.3
=======
        # image: stokwell/dv-rails:0.2.4
        image: stokwell/dv-rails:0.3.8
>>>>>>> ba3e0e6 (Squashed commit)
        command: ['bundle', 'exec', 'sidekiq']
