kubernetes-manifests/rails-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rails-ingress
spec:
  rules:
  - host: dv-rails.com
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dv-rails-service
            port:
              number: 3000
